fix map legend spacing

--- a/css/map.css
+++ b/css/map.css
@@ -43,21 +43,22 @@
     opacity: 1;
 }
 
-ul {
-    width: 40%;
-    margin: auto;
-}
-
 .legend {
     z-index: 3;
     text-align: center;
-    background-color: #f0f0f0;
+    margin-top: 20px;
+}
+
+.legend ul {
+    display: inline-block;
     list-style: none;
-    margin-top: 10px;
+    margin: 0;
+    padding: 0;
 }
 
 .legend li {
     float: left;
+    padding: 2px 5px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-right: 10px;
 }
